--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -73,30 +73,38 @@
     <div class="panel-body">
         <section>
             <div id="myholder">
-                <script src="./js/jointScript.js"></script>
+                <script src="./js/egSetup.js"></script>
             </div>
 
             <div id="two">
                 <panel id="sideCanvas">
-                    <h4 id="headSide1">ADD</h4>
-                    <div class="btn-group btn-group-justified" id="bt1" role="group" aria-label="...">
+                    <h4 id="headSide3">CONSTRUCT</h4>
+                    <div class="btn-group-vertical" id="bt1" role="group" aria-label="..." style="margin-top: 10px;">
                         <!--div class="btn-group" id="dub" role="group">
                             <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myAlert"> dbl neg </button>
                         </div-->
-                        <div class="btn-group" id="neg" role="group">
-                            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"> Negative </button>
+                        <div class="btn-group btn-group-justified">
+                            <div class="btn-group" id="neg" role="group">
+                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add Negative</button>
+                            </div>
+                            <div class="btn-group" id="assert" role="group">
+                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2">Add Assertion</button>
+                            </div>
                         </div>
-                        <div class="btn-group" id="assert" role="group">
-                            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2"> Assert </button>
+                        <div class="btn-group btn-group-justified">
+                            <div class="btn-group" role="group" aria-label="...">
+                                <button type="button" class="btn btn-info btn-lg" id="removeSubGraph">Remove</button>
+                            </div>
+                            <div class="btn-group" id="btnResize" role="group" aria-label="...">
+                                <button type="button" class="btn btn-info btn-lg" id="resizeSelection" aria-pressed="false">Resize</button>
+                            </div>
                         </div>
                     </div>
-                    <hr>
-                    <h4 id="headSide2">REMOVE</h4>
-                    <div class="btn-group-vertical" id="btnRemove" role="group" aria-label="...">
-                        <button type="button" class="btn btn-info btn-lg" id="removeSubGraph">Remove Selected</button>
-                    </div>
-                    <hr>
-                    <h4 id="headSide2">MODIFY</h4>
+                    <hr style="margin-bottom: 0px;">
+                    <!--h4 id="headSide2">REMOVE</h4>
+                    
+                    <hr-->
+                    <h4 id="headSide3">MODIFY</h4>
                     <div class="btn-group-vertical" role="group" aria-label="...">
                         <button type="button" class="btn btn-info">Specialize (Negative Context)</button>
                         <button type="button" class="btn btn-info">Generalize (Positive Context)</button>
@@ -218,6 +226,15 @@
     {
         model.remove(getSelectionEgId());
         view.removeCell();
+    }
+
+    document.getElementById("resizeSelection").onclick = function(){
+        let resizebutton = $("#resizeSelection").prop('aria-pressed');
+        if(!resizebutton){
+            resizing = true;
+        }else{
+            resizing = false;
+        }
     }
 
     document.getElementById("doubleNegative").onclick = function(){
