--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -80,30 +80,24 @@
                 <panel id="sideCanvas">
                     <h4 id="headSide3">CONSTRUCT</h4>
                     <div class="btn-group-vertical" id="bt1" role="group" aria-label="..." style="margin-top: 10px;">
-                        <!--div class="btn-group" id="dub" role="group">
-                            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myAlert"> dbl neg </button>
-                        </div-->
-                        <div class="btn-group btn-group-justified">
-                            <div class="btn-group" id="neg" role="group">
-                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add Negative</button>
+                        <div class="btn-group btn-group-justified" style="margin-bottom: 15px;">
+                            <div class="btn-group" role="group">
+                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" id="neg">Negative</button>
                             </div>
-                            <div class="btn-group" id="assert" role="group">
-                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2">Add Assertion</button>
+                            <div class="btn-group" role="group">
+                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2" id="assert">Assert</button>
                             </div>
                         </div>
                         <div class="btn-group btn-group-justified">
                             <div class="btn-group" role="group" aria-label="...">
                                 <button type="button" class="btn btn-info btn-lg" id="removeSubGraph">Remove</button>
                             </div>
-                            <div class="btn-group" id="btnResize" role="group" aria-label="...">
+                            <div class="btn-group" role="group" aria-label="...">
                                 <button type="button" class="btn btn-info btn-lg" id="resizeSelection" aria-pressed="false">Resize</button>
                             </div>
                         </div>
                     </div>
                     <hr style="margin-bottom: 0px;">
-                    <!--h4 id="headSide2">REMOVE</h4>
-                    
-                    <hr-->
                     <h4 id="headSide3">MODIFY</h4>
                     <div class="btn-group-vertical" role="group" aria-label="...">
                         <button type="button" class="btn btn-info">Specialize (Negative Context)</button>
@@ -118,8 +112,12 @@
         </section>
 
         <section>
-            <textarea id=console readonly rows="4" cols="100" wrap="soft" style="width: 75%;"> - Console -</textarea>
-            <button type="button" class="btn btn-secondary" onclick="return document.getElementById(&#34;console&#34;).value = &#34; - Console -&#34;">Clear Console</button>
+            <div>
+                <textarea id=console readonly rows="4" cols="100" wrap="soft" style="width: 75%;"> - Console -</textarea>
+            </div>
+            <div>
+                <button type="button" class="btn btn-secondary" onclick="return document.getElementById(&#34;console&#34;).value = &#34; - Console -&#34;"">Clear Console</button>
+            </div>
         </section>
     </div>
 <!--br-->
