--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -77,35 +77,43 @@
             </div>
 
             <div id="two">
-                <panel id="sideCanvas">
+                <panel id="sideCanvas" style="zoom: 110%">
                     <h4 id="headSide3">CONSTRUCT</h4>
                     <div class="btn-group-vertical" id="bt1" role="group" aria-label="..." style="margin-top: 10px;">
-                        <div class="btn-group btn-group-justified" style="margin-bottom: 15px;">
+                        <div class="btn-group btn-group-justified btn-sm" style="padding: 0px;">
                             <div class="btn-group" role="group">
-                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" id="neg">Negative</button>
+                                <button type="button" class="btn btn-m btn-info" data-toggle="modal" data-target="#myModal" id="neg">Negative</button>
                             </div>
                             <div class="btn-group" role="group">
-                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2" id="assert">Assert</button>
+                                <button type="button" class="btn btn-m btn-info" data-toggle="modal" data-target="#myModal2" id="assert">Assert</button>
                             </div>
                         </div>
-                        <div class="btn-group btn-group-justified">
+                        <div class="btn-group btn-group-justified btn-sm" style="padding: 0px;">
                             <div class="btn-group" role="group" aria-label="...">
-                                <button type="button" class="btn btn-info btn-lg" id="removeSubGraph">Remove</button>
+                                <button type="button" class="btn btn-m btn-info" id="removeSubGraph">Remove</button>
                             </div>
                             <div class="btn-group" role="group" aria-label="...">
-                                <button type="button" class="btn btn-info btn-lg" id="resizeSelection" aria-pressed="false">Resize</button>
+                                <button type="button" class="btn btn-m btn-info" id="resizeSelection" aria-pressed="false">Resize</button>
+                            </div>
+                        </div>
+                        <div class="btn-group btn-group-justified btn-sm" style="padding: 0px;">
+                            <div class="btn-group" role="group" aria-label="...">
+                                <button type="button" class="btn btn-m btn-info" id="undo">Undo</button>
+                            </div>
+                            <div class="btn-group" role="group" aria-label="...">
+                                <button type="button" class="btn btn-m btn-info" id="redo">Redo</button>
                             </div>
                         </div>
                     </div>
                     <hr style="margin-bottom: 0px;">
                     <h4 id="headSide3">MODIFY</h4>
                     <div class="btn-group-vertical" role="group" aria-label="...">
-                        <button type="button" class="btn btn-info">Specialize (Negative Context)</button>
-                        <button type="button" class="btn btn-info">Generalize (Positive Context)</button>
-                        <button type="button" class="btn btn-info" id="copy">Copy (Sub-Graph)</button>
-                        <button type="button" class="btn btn-info">Remove (Sub-Graph)</button>
-                        <button type="button" class="btn btn-info" id="doubleNegative">2X Negative (Sub-Graph)</button>
-                        <button type="button" class="btn btn-info">Remove 2X (From Sub-Graph)</button>
+                        <button type="button" class="btn btn-info btn-sm">Specialize (Negative Context)</button>
+                        <button type="button" class="btn btn-info btn-sm">Generalize (Positive Context)</button>
+                        <button type="button" class="btn btn-info btn-sm" id="copy">Copy (Sub-Graph)</button>
+                        <button type="button" class="btn btn-info btn-sm">Remove (Sub-Graph)</button>
+                        <button type="button" class="btn btn-info btn-sm" id="doubleNegative">2X Negative (Sub-Graph)</button>
+                        <button type="button" class="btn btn-info btn-sm">Remove 2X (From Sub-Graph)</button>
                     </div>
                 </panel>
             </div>
