Fixed some IE bugs

--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -213,7 +213,7 @@
                     document.getElementById("SpecializeButton").onclick = function(){
                         //MATT THIS THING NEEDS TO BE CHANGED TO YOUR SPECIALIZE THINGY
                         //model.specializeFunctionThing(document.getElementById("SpecializeExpression").value, getSelectionEgId());
-                        error_submit('Matt, add the specialize thing in here (index.htm, line 220-ish)','console');
+                        error_submit('Matt, add the specialize thing in here','console');
                     }
                 </script>
             </div>
@@ -238,9 +238,9 @@
                 </DL><br>
                 <DL>
                     <DT>Graph Creation
-                    <DD>You may enter an expression for a graph; alternatively, you may construct a graph from scratch using the CONSTRUCT box to add elements to the graph or to other elements.
+                    <DD>You may enter an expression for a graph; alternatively, you may construct a graph from scratch using the CONSTRUCT section to add elements to the graph or to other elements.
                     <DT>Graph Manipulation
-                    <DD>Once you are ready to manipulate the graph, you can use the MODIFY box to follow rules for existential graph manipulation.
+                    <DD>Once you are ready to manipulate the graph, you can use the MODIFY section to follow rules for existential graph manipulation.
                 </DL><br>
                 <DL>
                     <DT>Sheet of Assertion
