Minor bug fixes

--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -45,7 +45,7 @@
     <img class="uahImg" src="./images/uahLogo.png">
     <form id="inputForm">
         <div class="input-group">
-            <input title="!(x) = not x (x false), ^ = and, !(!(x)) = not not x (x true), x = any character (x true)" id="expression" type="text" class="form-control" placeholder="Enter Expression" aria-describedby="basic-addon2" onclick="return change_to_black();">
+            <input title="!(x) = not x (x false)&#013^ = and&#013!(!(x)) = not not x (x true)&#013x = any character(x true)" id="expression" type="text" class="form-control" placeholder="Enter Expression" aria-describedby="basic-addon2" onclick="return change_to_black();">
             <div class="input-group-btn" style="color: #337ab7;">
                 <button class="btn btn-secondary" onclick="return OnClickDraw();" type="button" id="Submit">Submit</button>
                 <button class="btn btn-secondary" onclick="return clearArea();" type="button">Clear</button>
@@ -87,7 +87,7 @@
                                 <button type="button" class="btn btn-m btn-info" id="removeSubGraph">Remove</button>
                             </div>
                             <div class="btn-group" role="group" aria-label="...">
-                                <button title="Click: Manual resize  |  Double-Click: Auto resize" type="button" class="btn btn-m btn-info" id="resizeSelection" aria-pressed="false">Resize</button>
+                                <button title="Click: Manual resize&#013Double-Click: Auto resize" type="button" class="btn btn-m btn-info" id="resizeSelection" aria-pressed="false">Resize</button>
                             </div>
                         </div>
                         <div class="btn-group btn-group-justified btn-sm" style="padding: 0px;">
