Hooked up string parser with specialize.

--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -211,9 +211,8 @@
 
                 <script>
                     document.getElementById("SpecializeButton").onclick = function(){
-                        //MATT THIS THING NEEDS TO BE CHANGED TO YOUR SPECIALIZE THINGY
-                        //model.specializeFunctionThing(document.getElementById("SpecializeExpression").value, getSelectionEgId());
-                        error_submit('Matt, add the specialize thing in here','console');
+                        //OKAY MAYBE IT WORKS
+                        model.check_expression(document.getElementById("SpecializeExpression").value, getSelectionEgId());
                     }
                 </script>
             </div>
