--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -45,7 +45,7 @@
     <a href="http://www.uah.edu/" data-toggle="tooltip" title="To UAH Website"><img class="uahImg" src="./images/uahLogo.png"></a>
     <form id="inputForm">
         <div class="input-group">
-            <input title="!(x) = not x (x false)&#013^ = and&#013!(!(x)) = not not x (x true)&#013x = any character(x true) &#013 | = or &#013 > = implication" id="expression" type="text" class="form-control" placeholder="Enter Expression" aria-describedby="basic-addon2" onclick="return change_to_black();">
+            <input title="!(x) = not x (x false)&#013^ = and&#013!(!(x)) = not not x (x true)&#013x = any character(x true)&#013> = implication&#013| = or" id="expression" type="text" class="form-control" placeholder="Enter Expression" aria-describedby="basic-addon2" onclick="return change_to_black();">
             <div class="input-group-btn" style="color: #337ab7;">
                 <button class="btn btn-secondary" onclick="return OnClickDraw();" type="button" id="Submit">Submit</button>
                 <button class="btn btn-secondary" onclick="return clearArea();" type="button">Clear</button>
